--- a/src/locales/en/form.json
+++ b/src/locales/en/form.json
@@ -3,16 +3,25 @@
   "Factory": "Factory",
   "HCM Office": "HCM Office",
   "HN Office": "HN Office",
-  "Feedback": "Feedback",
   "Visit Date": "Visit Date",
-  "Retail Area": "Retailer Area",
+  "Office Location": "Office Location",
   "Retailer Name": "Retailer name",
   "Employee Full Name": "Full Name",
-  "Office Location": "Office Location",
+  "Feedback": "Feedback",
+  "Retail Area": "Retailer Area",
   "Upload Retailer Photo": "Upload Retailer Photo",
+  "Employee Mobile Number": "Employee's mobile phone number",
   "Max Files Upload": "You can upload up to 2 files.",
   "Retailer Contact Number": "Retailer Contact Number",
+  "Cellulite Products": "Brands Available / Cellulite Products",
   "Drop File": "Drop your file here or click to upload",
-  "Employee Mobile Number": "Employee's mobile phone number",
-  "Cellulite Products": "Brands Available / Cellulite Products"
+  "errors": {
+    "Employee Full Name": "Please enter employee's full name",
+    "Employee Mobile Number": "Please enter employee phone number",
+    "Retailer Name": "Please enter retailer name",
+    "Retailer Contact Number": "Please enter retailer contact number",
+    "Input Number Patern": "Invalid phone number. Please enter 10 digits",
+    "Visit Date": "Please select a visit date",
+    "Upload Retailer Photo": "Please upload up to 2 photos"
+  }
 }
