[FIX] fix multilingual Admin page

--- a/src/locales/en/admin.json
+++ b/src/locales/en/admin.json
@@ -1,4 +1,5 @@
 {
+  "Number": "No.",
   "Office Location": "Office Location",
   "Cellulite Products": "Cellulite Products",
   "Visit Date": "Visit Date",
