--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -1,4 +1,5 @@
 {
+  "Number": "STT",
   "Office Location": "Nơi làm việc",
   "Cellulite Products": "Sản phẩm kích cầu",
   "Visit Date": "Ngày thăm",
