[FEAT] add open/close for filter form

--- a/src/locales/en/admin.json
+++ b/src/locales/en/admin.json
@@ -1,5 +1,6 @@
 {
   "Number": "No.",
+  "Visit List": "Visit List",
   "Office Location": "Office Location",
   "Cellulite Products": "Cellulite Products",
   "Visit Date": "Visit Date",
