--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -1,5 +1,6 @@
 {
   "Number": "STT",
+  "Visit List": "Danh sách ghé thăm",
   "Office Location": "Nơi làm việc",
   "Cellulite Products": "Sản phẩm kích cầu",
   "Visit Date": "Ngày thăm",
