--- a/src/locales/en/admin.json
+++ b/src/locales/en/admin.json
@@ -14,6 +14,8 @@
   "Cancel": "Cancel",
   "Search": "Search",
   "placeHolder": {
+    "Phone Number": "Enter phone number",
+    "Employee Name": "Enter employee name",
     "Office Location": "Select your workplace",
     "Cellulite Products": "Select product"
   }
