[FIX] fix multilingual

--- a/src/locales/en/admin.json
+++ b/src/locales/en/admin.json
@@ -15,7 +15,7 @@
   "Search": "Search",
   "placeHolder": {
     "Phone Number": "Enter phone number",
-    "Employee Name": "Enter employee name",
+    "Employee Name": "Enter employee full name",
     "Office Location": "Select your workplace",
     "Cellulite Products": "Select product"
   }
