--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -15,7 +15,7 @@
   "Search": "Tìm kiếm",
   "placeHolder": {
     "Phone Number": "Nhập SDT nhân viên",
-    "Employee Name": "Nhập tên nhân viên",
+    "Employee Name": "Nhập họ và tên nhân viên",
     "Office Location": "Chọn nơi làm việc",
     "Cellulite Products": "Chọn sản phẩm"
   }
