--- a/src/locales/en/admin.json
+++ b/src/locales/en/admin.json
@@ -1,6 +1,8 @@
 {
   "Number": "No.",
   "Visit List": "Visit List",
+  "Date Created": "Date Created",
+  "Creator": "Creator",
   "Office Location": "Office Location",
   "Cellulite Products": "Cellulite Products",
   "Visit Date": "Visit Date",
