[FIX] add multilingual for date picker filter

--- a/src/locales/en/admin.json
+++ b/src/locales/en/admin.json
@@ -19,6 +19,7 @@
     "Phone Number": "Enter phone number",
     "Employee Name": "Enter employee full name",
     "Office Location": "Select your workplace",
-    "Cellulite Products": "Select product"
+    "Cellulite Products": "Select product",
+    "Visit Date": "Select visit date"
   }
 }
