--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -19,6 +19,7 @@
     "Phone Number": "Nhập SDT nhân viên",
     "Employee Name": "Nhập họ và tên nhân viên",
     "Office Location": "Chọn nơi làm việc",
-    "Cellulite Products": "Chọn sản phẩm"
+    "Cellulite Products": "Chọn sản phẩm",
+    "Visit Date": "Chọn ngày thăm"
   }
 }
